# csc_501

./: .python-version  README.md  pyproject.toml  requirements.txt
assignment_1/: .gitattributes  .gitignore  README.md  requirements.txt
assignment_1/notebooks/: analyze_tags_and_ratings.ipynb  compute_sentiment.ipynb  compute_tag_emotion_stats.ipynb  load_db.ipynb  parse_tags.ipynb  parsed_tags.ipynb  sampler.ipynb  utils.py  wordcloud_helpers.py
assignment_1/sql/: QuickDBD-MovieLens.sql  create_indices.sql  create_tables.sql  load_db.sql
assignment_2/: .gitignore  .python-version  README.md  pyproject.toml
assignment_2/assn_2/: utils.py
assignment_2/data/: sakila_customers.csv  sakila_film.csv  sakila_films.csv  sakila_rentals.csv  world_bank_national_data.csv  world_economic_data.csv
assignment_2/notebooks/: analysis.ipynb  insert_data.ipynb  merge_country_data.ipynb
notebooks/: load_db.ipynb  sampler.ipynb
sql/: QuickDBD-MovieLens.sql  create_tables.sql
