[tool.poetry]
name = "movies"
version = "0.1.0"
description = "An analysis of movie ratings data"
authors = ["ezrajames <macdonaldezra@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mysql-connector-python = "^8.0.30"
pandas = "^1.5.0"
seaborn = "^0.12.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
